src/components/ColourSwatch/style.scss
@import "../../styles/base.scss";

.colour-swatch {
    position: relative;
    display: inline-flex;
    width: 100%;
    min-width: 18rem;
    align-items: center;
    gap: 1rem;
    border-radius: 0.5rem;
    margin-left: -1rem;
    padding: 0.5rem 1rem;
    cursor: pointer;

    @include tabletAndUp {
        width: 33%;
    }

    &:hover {
        background: var(--bg-back-colour);
    }
    &:active {
        background: var(--subtle-colour);
    }

    .swatch {
        width: 5rem;
        height: 5rem;
        border-radius: 2.5rem;
        background: var(--subtle-colour);
    }

    h4,
    p {
        margin: 0;
        line-height: 1.375rem;
    }

    p.subtle {
        font-size: 0.875rem;
        opacity: 0.5;
    }

    .message {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
        transform: translateY(1rem);
        opacity: 0;

        &.is-active {
            transform: translateY(0);
            opacity: 1;
        }

        span {
            display: inline-block;
            padding: 0.25rem 0.5rem;
            border-radius: 0.25rem;
            background: var(--headline-colour);
            color: var(--bg-colour);
        }
    }
}

